[package]
name = "rusty-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.3.0"
thiserror = "1.0"
ini = "1.3.0"
deflate = "1.0.0"
inflate = "0.4.5"
nom = "7.1.1"
clap = { version = "4.0.19", features = ["derive"] }
sha1_smol = { version = "1.0.0", features = ["std"] }
hex = "0.4.3"
chrono = "0.4.23"
